--- a/dobe/src/main/AndroidManifest.xml
+++ b/dobe/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.study.mli.dobe" >
 
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
 
     <application
         android:name=".app.DApplication"
