--- a/dobe/build.gradle
+++ b/dobe/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 23
     buildToolsVersion '23.0.3'
     defaultConfig {
-        applicationId "com.study.mli.hoby"
+        applicationId "com.study.mli.dobe"
         minSdkVersion 18
         targetSdkVersion 23
         versionCode 1
