缩短动画时间

--- a/dobe/src/main/AndroidManifest.xml
+++ b/dobe/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         </activity>
 
         <activity android:name=".activity.ShowImageActivity"
-                  android:theme="@style/Transparent"></activity>
+                  ></activity>
     </application>
 
 </manifest>
